# carina-provider-aws

./: .gitignore  CLAUDE.md  CODEGEN.md  Cargo.toml
.github/workflows/: ci.yml  docs.yml  release.yml
acceptance-tests/: run-tests.sh
acceptance-tests/create_before_destroy/: ec2_vpc_step1.crn  ec2_vpc_step2.crn  run.sh
acceptance-tests/ec2_egress_only_internet_gateway/: basic.crn
acceptance-tests/ec2_eip/: basic.crn
acceptance-tests/ec2_flow_log/: basic.crn
acceptance-tests/ec2_internet_gateway/: basic.crn
acceptance-tests/ec2_nat_gateway/: basic.crn
acceptance-tests/ec2_route/: igw.crn  nat_gateway.crn
acceptance-tests/ec2_route_table/: basic.crn
acceptance-tests/ec2_security_group/: ipv6_rules.crn  with_egress.crn  with_ingress.crn
acceptance-tests/ec2_security_group_egress/: basic.crn  dest_sg.crn  ipv6.crn
acceptance-tests/ec2_security_group_ingress/: basic.crn  ipv6.crn  source_sg.crn
acceptance-tests/ec2_subnet/: basic.crn  ipv6.crn  with_dns_options.crn
acceptance-tests/ec2_subnet_route_table_association/: basic.crn
acceptance-tests/ec2_transit_gateway/: basic.crn
acceptance-tests/ec2_transit_gateway_attachment/: basic.crn
acceptance-tests/ec2_vpc/: basic.crn
acceptance-tests/ec2_vpc_endpoint/: basic.crn
acceptance-tests/ec2_vpc_gateway_attachment/: basic.crn
acceptance-tests/ec2_vpc_peering_connection/: basic.crn
acceptance-tests/ec2_vpn_gateway/: basic.crn
acceptance-tests/iam_role/: basic.crn
acceptance-tests/in_place_update/: ec2_route_step1.crn  ec2_route_step2.crn  ec2_route_table_step1.crn  ec2_route_table_step2.crn  ec2_security_group_step1.crn  ec2_security_group_step2.crn  ec2_subnet_step1.crn  ec2_subnet_step2.crn  ec2_vpc_step1.crn  ec2_vpc_step2.crn  run.sh  s3_bucket_acl_step1.crn  s3_bucket_acl_step2.crn  s3_bucket_step1.crn  s3_bucket_step2.crn
acceptance-tests/logs_log_group/: basic.crn
acceptance-tests/s3_bucket/: acl_private.crn  basic.crn  object_ownership.crn  (+1 more)
carina-codegen-aws/: Cargo.toml
carina-codegen-aws/src/: lib.rs  main.rs  resource_defs.rs
carina-codegen-aws/tests/: smithy_models_test.rs
carina-provider-aws/: Cargo.toml
carina-provider-aws/src/: convert.rs  ec2_security_group_rules.rs  ec2_tags.rs  factory.rs  helpers.rs  lib.rs  main.rs  provider.rs  provider_generated.rs  tests.rs
carina-provider-aws/src/schemas/: types.rs
carina-provider-aws/src/services/: mod.rs
carina-provider-aws/src/services/ec2/: egress_only_internet_gateway.rs  eip.rs  flow_log.rs  internet_gateway.rs  nat_gateway.rs  route.rs  route_table.rs  security_group.rs  security_group_ingress.rs  subnet.rs  subnet_route_table_association.rs  transit_gateway.rs  transit_gateway_attachment.rs  vpc.rs  vpc_endpoint.rs  vpc_gateway_attachment.rs  vpc_peering_connection.rs  vpn_gateway.rs
carina-provider-aws/src/services/iam/: role.rs
carina-provider-aws/src/services/identitystore/: user.rs
carina-provider-aws/src/services/logs/: log_group.rs
carina-provider-aws/src/services/organizations/: account.rs  mod.rs  organization.rs
carina-provider-aws/src/services/route53/: mod.rs  record_set.rs
carina-provider-aws/src/services/s3/: bucket.rs
carina-provider-aws/src/services/sts/: caller_identity.rs
carina-smithy/: Cargo.toml
scripts/: check-examples.sh  download-smithy-models.sh  generate-docs.sh  generate-provider.sh  generate-schemas-smithy.sh  setup-hooks.sh
src/: ec2_security_group_rules.rs  ec2_tags.rs  normalizer.rs  provider_generated.rs  tests.rs
(+57 files in other folders)
