[package]
name = "carina-provider-aws"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AWS provider for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina-provider-aws"
homepage = "https://github.com/carina-rs/carina-provider-aws"

[lib]
doctest = false

[[bin]]
name = "carina-provider-aws"
path = "src/main.rs"

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina" }
carina-aws-types = { git = "https://github.com/carina-rs/carina" }
carina-plugin-host = { git = "https://github.com/carina-rs/carina" }
carina-plugin-sdk = { git = "https://github.com/carina-rs/carina" }
carina-provider-protocol = { git = "https://github.com/carina-rs/carina" }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
urlencoding = "2"
