[package]
name = "carina-provider-aws"
version.workspace = true
edition = "2024"
license = "MIT"
description = "AWS provider for Carina infrastructure management tool"
repository = "https://github.com/carina-rs/carina-provider-aws"
homepage = "https://github.com/carina-rs/carina-provider-aws"

[lib]
doctest = false

[[bin]]
name = "carina-provider-aws"
path = "src/main.rs"

[features]
default = ["native"]
native = []

[dependencies]
carina-core = { git = "https://github.com/carina-rs/carina", branch = "feat/wasm-phase2-host" }
carina-aws-types = { git = "https://github.com/carina-rs/carina", branch = "feat/wasm-phase2-host" }
carina-plugin-sdk = { git = "https://github.com/carina-rs/carina", branch = "feat/wasm-phase2-host" }
carina-provider-protocol = { git = "https://github.com/carina-rs/carina", branch = "feat/wasm-phase2-host" }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1", default-features = false, features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", default-features = false, features = ["behavior-version-latest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
urlencoding = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
wit-bindgen = { version = "0.51", default-features = false, features = ["macros"] }
wasi = "0.14"
